<resources>
    <plurals name="transaction_details_activity_total_transactions">
        <item quantity="one">%1$s transaction</item>
        <item quantity="other">%1$s transactions</item>
    </plurals>
    <string name="permission_camera_rationale">Access to the camera is needed to scan QR code</string>
    <string name="no_camera_permission">The QR code scanner cannot run because it does not have the camera permission.</string>
    <string name="low_storage_error">Dependencies cannot be downloaded due to low device storage</string>
    <string name="barcode_success">Barcode read successfully</string>
    <string name="barcode_failure">No barcode captured</string>
    <string name="barcode_error">Error reading barcode: %1$s</string>
    <string name="new_wallet_activity_xml_welcome_title">Welcome to Radix</string>
    <string name="new_wallet_activity_xml_create_import">Create a new password protected wallet or import an existing one</string>
    <string name="new_wallet_activity_xml_create_new_wallet_button">Create new wallet</string>
    <string name="new_wallet_activity_xml_create_paper_key_wallet_button">Create paper key wallet</string>
    <string name="new_wallet_activity_xml_import_wallet_button">Import existing keystore wallet</string>
    <string name="new_wallet_activity_xml_import_wallet_from_mnemonic_or_seed_button">Import wallet from mnemonic or seed</string>
    <string name="new_wallet_activity_xml_import_wallet_from_seed_button">Import wallet from seed</string>
    <string name="enter_password_activity_xml_welcome_title">Welcome to Radix</string>
    <string name="enter_password_activity_xml_choose_password">Choose a password for your wallet</string>
    <string name="enter_password_activity_xml_password_hint">Password</string>
    <string name="enter_password_activity_xml_repeat_password_hint">Repeat Password</string>
    <string name="enter_password_activity_xml_create_wallet_button">Create wallet</string>
    <string name="enter_password_activity_xml_delete_wallet_button">Delete existing wallet</string>
    <string name="enter_password_activity_sub_welcome_msg">Enter password to unlock wallet</string>
    <string name="enter_password_activity_unlock_button">Unlock Wallet</string>
    <string name="enter_password_activity_creating_wallet_progress_dialog">Creating Wallet…</string>
    <string name="enter_password_activity_unlocking_wallet_progress_dialog">Unlocking Wallet…</string>
    <string name="enter_password_activity_xml_universe">Connecting to universe\u0020</string>
    <string name="enter_password_activity_xml_specific_node">and node\u0020</string>
    <string name="toast_no_internet">No internet connection.</string>
    <string name="toast_passwords_dont_match_error">Passwords don\'t match</string>
    <string name="toast_creating_wallet_error">Something went wrong when creating your wallet!</string>
    <string name="toast_decrypting_wallet_error">Unable to decrypt file, please try again!</string>
    <string name="toast_password_length_error">Password needs to be at least 6 characters</string>
    <string name="main_activity_address_copied">Address copied to clipboard</string>
    <string name="bottom_nav_title_chat">Chat</string>
    <string name="bottom_nav_title_contacts">Contacts</string>
    <string name="bottom_nav_title_account">Account</string>
    <string name="bottom_nav_title_network">Network</string>
    <string name="invalid_address_toast">Address is not valid</string>
    <string name="send_radix_activity_title">Send Radix</string>
    <string name="send_radix_activity_sending_progress_dialog">Sending…</string>
    <string name="send_activity_enter_address_hint">Enter address</string>
    <string name="send_activity_no_tokens_spinner">NO TOKENS AVAILABLE</string>
    <string name="send_activity_token_type_spinner">TOKEN</string>
    <string name="send_activity_xml_amount">AMOUNT</string>
    <string name="send_activity_xml_radix_r">R</string>
    <string name="send_activity_xml_amount_hint">0</string>
    <string name="send_activity_xml_message_hint">Message</string>
    <string name="send_activity_xml_send_button">Send</string>
    <string name="toast_enter_valid_amount_error">Please enter a valid amount!</string>
    <string name="toast_amount_too_small_error">For now, cannot send less than 0.00001 XRD</string>
    <string name="toast_entered_own_address_error">You have entered your own address.</string>
    <string name="toast_wrong_address_format_error">Wrong address format, check again!</string>
    <string name="toast_not_enough_tokens_error">You don\'t have enough tokens!</string>
    <string name="toast_collision_error">There was an error, please try again!</string>
    <string name="toast_too_many_decimal_places_error">Test tokens only allow up to 5 decimal places</string>
    <string name="toast_error_reading_qr_code">Error reading QR code</string>
    <string name="toast_token_not_owned">"Token not owned!"</string>
    <string name="transaction_details_activity_title">Transaction</string>
    <string name="transaction_details_activity_received">You received</string>
    <string name="transaction_details_activity_from">From</string>
    <string name="transaction_details_activity_sent">You sent</string>
    <string name="transaction_details_activity_to">To</string>
    <string name="transaction_details_activity_xml_image_background_description">Image background</string>
    <string name="transaction_details_activity_xml_details_title">Details</string>
    <string name="transaction_details_activity_xml_test_tokens">TEST TOKENS</string>
    <string name="transaction_details_activity_xml_message_icon_description">Message icon</string>
    <string name="transaction_details_activity_xml_send_tokens">Send tokens</string>
    <string name="transaction_details_activity_xml_history_title">History</string>
    <string name="transaction_details_activity_xml_number_of_transactions">Number of transactions</string>
    <string name="transaction_details_activity_xml_total_sent">Total sent</string>
    <string name="transaction_details_activity_xml_total_received">Total received</string>
    <string name="conversation_activity_title">Conversation</string>
    <string name="conversation_activity_me_label">Me</string>
    <string name="conversation_activity_today_label">Today</string>
    <string name="conversation_activity_yesterday_label">Yesterday</string>
    <string name="conversation_activity_message_bubble" translatable="false">%1$s&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</string>
    <string name="conversation_activity_send_message_error">Unable to send message, please try again!</string>
    <string name="conversation_activity_xml_write_message">Write message</string>
    <string name="conversation_activity_xml_attachment_button_description">Attachment button</string>
    <string name="conversation_activity_xml_send_button_description">Send button</string>
    <string name="receive_radix_activity_amount_hint">Amount</string>
    <string name="receive_radix_activity_message_hint">Message</string>
    <string name="receive_radix_activity_title">Generate Invoice</string>
    <string name="receive_radix_activity_copy_address_button">Copy Address</string>
    <string name="receive_radix_activity_copy_invoice_button">Copy Invoice</string>
    <string name="receive_radix_activity_share_invoice_button">Share Invoice</string>
    <string name="barcode_capture_activity_title">QR Code Scanner</string>
    <string name="barcode_capture_activity_dialog_negative">Settings</string>
    <string name="wallet_fragment_retrieving_transactions">Retrieving Transactions…</string>
    <string name="wallet_fragment_all_transactions">All Transactions</string>
    <string name="wallet_fragment_no_transactions">No Transactions</string>
    <string name="wallet_fragment_total_tokens">TOTAL</string>
    <string name="wallet_fragment_xml_default_zero">0</string>
    <string name="wallet_fragment_xml_account_balance_title">ACCOUNT BALANCE</string>
    <string name="wallet_fragment_xml_send_button">Send</string>
    <string name="wallet_fragment_xml_receive_button">Receive</string>
    <string name="wallet_fragment_xml_get_test_tokens_button">Get Test Tokens</string>
    <string name="wallet_fragment_xml_empty_transactions_background_description">Empty transactionEntities background</string>
    <string name="wallet_fragment_item_xml_test_tokens">TEST TOKENS</string>
    <string name="toast_request_tokens_faucet">Requested tokens from Faucet!</string>
    <string name="assets_fragment_xml_receive_button">Receive</string>
    <string name="assets_fragment_xml_send_button">Send</string>
    <string name="assets_fragment_error_toast">There was an error!</string>
    <string name="assets_fragment_xml_warning_back_up_message">Remember to backup your wallet</string>
    <string name="assets_fragment_warning_sign_close_button_content_description">Warning sign close button</string>
    <string name="asset_transactions_fragment_xml_your_balance_title">YOUR BALANCE</string>
    <string name="asset_transactions_fragment_xml_receive_button">Receive</string>
    <string name="asset_transactions_fragment_xml_send_button">Send</string>
    <string name="asset_transactions_fragment_xml_asset_description">DESCRIPTION</string>
    <string name="asset_transactions_fragment_xml_asset_supply_type">SUPPLY TYPE</string>
    <string name="asset_transactions_fragment_xml_asset_total_supply">TOTAL SUPPLY</string>
    <string name="asset_transactions_fragment_xml_asset_rri">RRI</string>
    <string name="asset_transactions_fragment_xml_arrow_content_description">Arrow direction showing if to expand or collapse toolbar</string>
    <string name="contacts_fragment_user_faucet">Faucet</string>
    <string name="contacts_fragment_now">Now</string>
    <string name="contacts_fragment_xml_empty_contacts_image_background_description">Image background when there are no messageEntities</string>
    <string name="toast_copied_clipboard">copied to clipboard</string>
    <string name="account_fragment_sharing_intent_chooser_title">Share address</string>
    <string name="account_fragment_xml_scan_qr">Scan QR code to share address</string>
    <string name="account_fragment_xml_radix_address">RADIX ADDRESS</string>
    <string name="account_fragment_xml_tap_qr_instructions">Tap QR code to copy address or hold to share</string>
    <string name="account_fragment_xml_generated_qr_code_description">Generated QR code</string>
    <string name="more_options_fragment_export_intent_chooser_title">Export or backup wallet</string>
    <string name="more_options_fragment_xml_wallet_options_title">Wallet Options</string>
    <string name="more_options_fragment_xml_export_backup_wallet">Export/Backup wallet</string>
    <string name="more_options_fragment_xml_delete_wallet">Delete wallet</string>
    <string name="more_options_fragment_xml_security_title">Security</string>
    <string name="more_options_fragment_xml_network_title">Network</string>
    <string name="node_ip_address_dialog_enter_address_title">Enter node ip address:</string>
    <string name="node_ip_address_dialog_address_hint">IP Address</string>
    <string name="node_ip_address_dialog_random_radio_button">Random</string>
    <string name="node_ip_address_dialog_custom_radio_button">Custom</string>
    <string name="keypad_view_one">1</string>
    <string name="keypad_view_four">4</string>
    <string name="keypad_view_seven">7</string>
    <string name="keypad_view_two">2</string>
    <string name="keypad_view_five">5</string>
    <string name="keypad_view_eight">8</string>
    <string name="keypad_view_zero">0</string>
    <string name="keypad_view_three">3</string>
    <string name="keypad_view_six">6</string>
    <string name="keypad_view_nine">9</string>
    <string name="keypad_view_content_description_delete_last_input">Delete last input</string>
</resources>