<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/one"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="?selectableItemBackgroundBorderless"
        android:gravity="center"
        android:text="@string/keypad_view_one"
        android:textColor="#000"
        android:textSize="16sp"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.33333333" />

    <TextView
        android:id="@+id/four"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/keypad_view_four"
        android:textColor="#000"
        android:textSize="16sp"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/one"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.33333333" />

    <TextView
        android:id="@+id/seven"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/keypad_view_seven"
        android:textColor="#000"
        android:textSize="16sp"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/four"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.33333333" />

    <TextView
        android:id="@+id/two"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/keypad_view_two"
        android:textColor="#000"
        android:textSize="16sp"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.25"
        app:layout_constraintStart_toEndOf="@+id/one"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.33333333" />

    <TextView
        android:id="@+id/five"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/keypad_view_five"
        android:textColor="#000"
        android:textSize="16sp"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.25"
        app:layout_constraintStart_toEndOf="@+id/four"
        app:layout_constraintTop_toBottomOf="@+id/two"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.33333333" />

    <TextView
        android:id="@+id/eight"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/keypad_view_eight"
        android:textColor="#000"
        android:textSize="16sp"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.25"
        app:layout_constraintStart_toEndOf="@+id/seven"
        app:layout_constraintTop_toBottomOf="@+id/five"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.33333333" />

    <TextView
        android:id="@+id/zero"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/keypad_view_zero"
        android:textColor="#000"
        android:textSize="16sp"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.25"
        app:layout_constraintStart_toEndOf="@+id/seven"
        app:layout_constraintTop_toBottomOf="@+id/eight"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.33333333" />

    <TextView
        android:id="@+id/three"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/keypad_view_three"
        android:textColor="#000"
        android:textSize="16sp"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.25"
        app:layout_constraintStart_toEndOf="@+id/two"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.33333333" />

    <TextView
        android:id="@+id/six"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/keypad_view_six"
        android:textColor="#000"
        android:textSize="16sp"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.25"
        app:layout_constraintStart_toEndOf="@+id/five"
        app:layout_constraintTop_toBottomOf="@+id/three"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.33333333" />

    <TextView
        android:id="@+id/nine"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/keypad_view_nine"
        android:textColor="#000"
        android:textSize="16sp"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.25"
        app:layout_constraintStart_toEndOf="@+id/eight"
        app:layout_constraintTop_toBottomOf="@+id/six"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.33333333" />

    <FrameLayout
        android:id="@+id/delete_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.25"
        app:layout_constraintStart_toEndOf="@+id/zero"
        app:layout_constraintTop_toBottomOf="@+id/nine"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.33333333">

        <ImageView
            android:id="@+id/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/keypad_view_content_description_delete_last_input"
            android:src="@drawable/ic_arrow_back_24" />
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>