<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/startScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

  <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@color/colorPrimary">

    <TextView
        android:id="@+id/welcomeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/enter_password_activity_xml_welcome_title"
        android:textColor="@color/colorAccentSecondary"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/subWelcomeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/enter_password_activity_xml_choose_password"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeTextView"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputPasswordTIL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:textColorHint="@color/notQuiteWhiteAlpha"
        android:theme="@style/DarkThemeTextInputEditText"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subWelcomeTextView"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/colorAccent">

      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/inputPasswordTIET"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/enter_password_activity_xml_password_hint"
          android:inputType="textPassword"
          android:maxLines="1"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputRepeatPasswordTIL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:textColorHint="@color/notQuiteWhiteAlpha"
        android:theme="@style/DarkThemeTextInputEditText"
        android:visibility="visible"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputPasswordTIL"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/colorAccent">

      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/inputRepeatPasswordTIET"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/enter_password_activity_xml_repeat_password_hint"
          android:inputType="textPassword"
          android:maxLines="1"/>
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/createWalletButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/enter_password_activity_xml_create_wallet_button"
        android:textColor="@android:color/white"
        android:theme="@style/AccentButton"
        app:layout_constraintBottom_toTopOf="@+id/exportWalletTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputRepeatPasswordTIL"
        app:layout_constraintVertical_bias="1.0"
        tools:backgroundTint="@color/colorAccent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/exportWalletTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/enter_password_activity_xml_delete_wallet_button"
        android:textColor="@android:color/white"
        android:theme="@style/DangerButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:backgroundTint="@color/lightRed"/>

  </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>